Fix time display in readable format and convert UTC to local time"

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -46,7 +46,7 @@ div .container {
   margin-left: auto;
   margin-right: auto;
   margin-top: 5%;
-  width: 65%;
+  width: 80%;
 }
 
 a {
